src/objects/ints__MicroBlitParams__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Contains parameters used to invoke Micro Bilt api</description>
    <fields>
        <fullName>ints__End_Point__c</fullName>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Get_Content_URL__c</fullName>
        <label>Get Content URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__IsNotRelatedRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you check this, the records related to Microbilt are created</inlineHelpText>
        <label>IsNotRelatedRecords</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__MemberId__c</fullName>
        <label>MemberId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__MemberPwd__c</fullName>
        <label>MemberPwd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__lookupAPI__c</fullName>
        <label>lookupAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Micro Bilt Parameters</label>
</CustomObject>